# gencal_idiomas

./: .env.example  .gitignore  README.md  app.py  calendario.py  config.py  db.py  festivos.json  generator.py  logger.py  main.py  pyproject.toml  sharepoint.py  tree.py  ui.py  utils.py
services/: calendar_service.py  db_service.py  excel_service.py  holiday_service.py  sharepoint_service.py
ui/: main_window.py
ui/components/: calendar_manager.py  conexiones_panel.py  config_panel.py  db_manager.py  dialogs.py  fechas_panel.py  header.py  holiday_panel.py  log_panel.py  main_panel.py  sharepoint_manager.py  statusbar_panel.py
ui/utils/: log_manager.py
